--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.1.3",
     "@pinia/nuxt": "^0.4.3",
+    "@types/uuid": "^8.3.4",
     "c8": "^7.12.0",
     "nuxt": "3.0.0-rc.13",
     "vitest": "^0.24.5"
   },
   "dependencies": {
-    "pinia": "^2.0.23"
+    "pinia": "^2.0.23",
+    "uuid": "^9.0.0"
   }
 }
