--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "scripts": {
+    "test": "vitest run --coverage",
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
@@ -11,6 +12,7 @@
     "@nuxtjs/tailwindcss": "^6.1.3",
     "@pinia/nuxt": "^0.4.3",
     "@types/uuid": "^8.3.4",
+    "@vitest/coverage-c8": "^0.25.0",
     "c8": "^7.12.0",
     "nuxt": "3.0.0-rc.13",
     "vitest": "^0.24.5"
